# cmake-test

./: CMakeLists.txt
CMakeStatic/: CMakeLists.txt  CMakeStatic.cpp  CMakeStatic.h
HelloWorld_CMake/: CMakeLists.txt  HelloWorld_CMake.cpp  HelloWorld_CMake.h
